# docs/swagger.json
@@ -17,6 +17,42 @@
     "host": "uzsk-api.iamtakagi.net",
     "basePath": "/api",
     "paths": {
+        "/api/avatar/{part}/bedrock/{xuid}": {
+            "get": {
+                "description": "Get the specified part of player's skin image",
+                "produces": [
+                    "image/png"
+                ],
+                "tags": [
+                    "avatar"
+                ],
+                "summary": "Get player's skin image",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "which part to retrieve",
+                        "name": "part",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "XUID of target Bedrock player",
+                        "name": "xuid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/structs.Error"
+                        }
+                    }
+                }
+            }
+        },
         "/profiles": {
             "get": {
                 "description": "Get a list of profiles with optional filtering and sorting, etc.",
@@ -80,6 +116,12 @@
                                 "$ref": "#/definitions/structs.Profile"
                             }
                         }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/structs.Error"
+                        }
                     }
                 }
             }
@@ -111,6 +153,12 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/structs.Profile"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/structs.Error"
                         }
                     }
                 }
@@ -154,7 +202,7 @@
                 "tags": [
                     "servers"
                 ],
-                "summary": "Get servers",
+                "summary": "Get server",
                 "parameters": [
                     {
                         "type": "string",
@@ -173,15 +221,46 @@
                                 "$ref": "#/definitions/structs.Server"
                             }
                         }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/structs.Error"
+                        }
                     }
                 }
             }
         }
     },
     "definitions": {
+        "structs.Avatar": {
+            "type": "object",
+            "properties": {
+                "body": {
+                    "type": "string"
+                },
+                "face": {
+                    "type": "string"
+                },
+                "head": {
+                    "type": "string"
+                }
+            }
+        },
+        "structs.Error": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                }
+            }
+        },
         "structs.Profile": {
             "type": "object",
             "properties": {
+                "avatar": {
+                    "$ref": "#/definitions/structs.Avatar"
+                },
                 "currency": {
                     "type": "integer"
                 },
